# yaid

./: .editorconfig  .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  darkmode.js  darkmode.js.map  go.mod  go.sum  index.html  script.js  script.js.map  style.css  yaid-component.js  yaid-component.js.map  yaid-go.html  yaid-js.html  yaid-py.html  yaid.go  yaid_test.go
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-go.yml  check-js.yml  check-py.yml  check.yml  main.yml  release-please-js.yml  release-please-py.yml  release.yml
cmd/: main.go
go-yaid/: go.mod  yaid.go  yaid_test.go
go-yaid/cmd/: main.go
site/: .eslintrc  app.html  build.js  build.sh  build.ts  darkmode.js  package.json  script.js  style.scss  template.handlebars  template.html  yaid-component.js
yaid-go/: README.md  go.mod  yaid.go  yaid_test.go
yaid-go/cmd/: main.go
yaid-js/: README.md  cmd.js  crockford.ts  package.json  tsconfig.json  yaid.ts  yaid_test.ts
yaid-py/: README.md  pyproject.toml  test.py  tests.py  yaid.py  yaid_test.py
yaid-py/tests/: __init__.py
yaid-py/yaid/: __init__.py
yaid-ts/: README.md  cmd.js  cmd.ts  crockford.ts  package-lock.json  package.json  tsconfig.json  yaid.test.ts  yaid.ts  yaid_test.ts
yaidpy/: __init__.py
